<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".UI.MainFragment">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/PizzaImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:src="@drawable/pizza_main_screen"/>

        <TextView
            android:id="@+id/NameCafe"
            android:layout_width="187dp"
            android:layout_height="75dp"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp20"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/SushiImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:src="@drawable/sushi_main_screen" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/Description"
            android:layout_width="269dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="@string/Info"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp14"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/Description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="monospace"
            android:text="@string/Time"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp14"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/Telephone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/Time"
            android:layout_marginTop="0dp"
            android:fontFamily="monospace"
            android:text="@string/Telephone"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp14"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/Logotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/ic_launcher_foreground" />

    </RelativeLayout>

    <Button
        android:id="@+id/Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/Menu"
        android:textColor="@color/white"
        android:textSize="@dimen/in_sp14"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />

    <Button
        android:id="@+id/Basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/Registration"
        android:textColor="@color/white"
        android:textSize="@dimen/in_sp14"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/RelativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/Profile"
        android:textColor="@color/white"
        android:textSize="@dimen/in_sp14"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/Basket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menu" />

</androidx.constraintlayout.widget.ConstraintLayout>